# comfyui_otacoo

./: CHANGELOG.md  LICENSE  README.md  __init__.py  package.json  pyproject.toml  update-version.js
.github/workflows/: publish.yml
js/: button.js
static/: imgextract.html  imginfo.html  standalone.html
static/css/: styles.css
static/js/: script.js
web/: imginfo.html
web/css/: styles.css
web/js/: script.js
