[project]
name = "otacoo"
description = "Extract generation info from PNG and JPEG images, A1111/Forge, NovelAI, InvokeAI, Midjourney and (most) ComfyUI types of metadata."
version = "1.2.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/otacoo/comfyui_metadata_extract"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "otacoo"
DisplayName = "comfyui_metadata_extract"
Icon = "https://avatars.githubusercontent.com/u/208893667"
