[project]
name = "comfyui_metadata_extract"
description = "Standalone tool to extract generation info from PNG, JPEG, WebP images, works for A1111/Forge, NovelAI, InvokeAI, Midjourney and (most) ComfyUI types of metadata."
version = "1.2.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/otacoo/comfyui_metadata_extract"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "otacoo"
DisplayName = "Metadata-Extractor"
Icon = "https://avatars.githubusercontent.com/u/208893667"
